--- a/less/body.less
+++ b/less/body.less
@@ -95,6 +95,7 @@
         align-items: center;
         width: 100%;
         margin-top: 1%;
+        margin-bottom: 2%;
         .team-section1{
             display: flex;
             justify-content: center;
@@ -104,11 +105,22 @@
             .person{
                 padding: 1%;
                 width: 30%;
-            }
-            img{
-                width: 10rem;
-                height: 40rem;
-                width: 100%;
+                h4{
+                    font-size: 2rem;
+                    text-align: center;
+                    margin-top: 2%;
+                    font-family: 'Nunito', sans-serif;
+                }
+                p{
+                    font-size: 1.5rem;
+                    text-align: center;
+                }
+                img{
+                    border-radius: 5px;
+                    width: 10rem;
+                    height: 40rem;
+                    width: 100%;
+                }
             }
         }
         .team-section2{
@@ -120,11 +132,22 @@
             .person{
                 padding: 1%;
                 width: 30%;
-            }
-            img{
-                width: 10rem;
-                height: 40rem;
-                width: 100%;
+                h4{
+                    font-size: 2rem;
+                    text-align: center;
+                    margin-top: 2%;
+                    font-family: 'Nunito', sans-serif;
+                }
+                p{
+                    font-size: 1.5rem;
+                    text-align: center;
+                }
+                img{
+                    width: 10rem;
+                    height: 40rem;
+                    width: 100%;
+                    border-radius: 5px;
+                }
             }
         }
     }
